마이페이지 즐겨찾기 상세

--- a/src/assets/style/mypage.css
+++ b/src/assets/style/mypage.css
@@ -560,7 +560,7 @@ main{
     border: 1px solid #d9d9d9;
 }
 #mypage >section .dash-board >section:nth-of-type(2) >section:nth-of-type(2) >ul >li >div:nth-of-type(2){
-    width: 225px;
+    width: 238px;
     display: flex;
     flex-direction: column;
     gap: 7px;
@@ -573,7 +573,7 @@ main{
     align-items: baseline;
 }
 #mypage >section .dash-board >section:nth-of-type(2) >section:nth-of-type(2) >ul >li >div:nth-of-type(2) >div:nth-of-type(1) >span:nth-of-type(1){
-    max-width: 167px;
+    max-width: 180px;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
@@ -801,7 +801,7 @@ main{
 }
 #mypage >section .likes >section >table >thead >tr >th:nth-of-type(2),
 #mypage >section .likes >section >table >tbody >tr >td:nth-of-type(2){
-    width: 282px;
+    width: 300px;
 }
 #mypage >section .likes >section >table >thead >tr >th:nth-of-type(3),
 #mypage >section .likes >section >table >tbody >tr >td:nth-of-type(3){
@@ -813,7 +813,7 @@ main{
 }
 #mypage >section .likes >section >table >thead >tr >th:nth-of-type(5),
 #mypage >section .likes >section >table >tbody >tr >td:nth-of-type(5){
-    width: 90px;
+    width: 80px;
     padding-right: 0px;
 }
 #mypage >section .likes >section >table >tbody >tr >td:nth-of-type(3){
@@ -971,3 +971,60 @@ main{
 #mypage .review-modal .box .btn{justify-content: center}
 #mypage .review-modal .box .btn a{width:90px; margin:0 5px; border:1px solid #ddd; border-radius: 5px; line-height: 37px; text-align: center; color:#888; cursor: pointer;}
 #mypage .review-modal .box .btn a.review-btn{background: #FC7486; border-color: #FC7486; color:#fff;}
+
+/* 펼쳐지는 상세정보 */
+#mypage .detail{position:absolute; top:-200px; left:200px; width:390px; height: calc(100vh - 100px); box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1); border-radius: 10px; background: #fff; overflow: hidden;}
+#mypage .detail-center{top:-50px; height: calc(100vh - 520px);}
+#mypage .detail .scroll{position:absolute; height:100%; overflow-y: scroll; padding:0 15px 10px 20px; }
+#mypage .detail .scroll-center{ overflow-y: unset; }
+#mypage .detail .scroll>p{position:absolute; width:350px; margin-bottom:15px; padding-top:10px; border-bottom:1px solid #ddd; background: #fff; font-size: 17px; line-height: 45px; z-index: 100;}
+#mypage .detail .scroll>p span{float: right; cursor: pointer;}
+#mypage .detail .data{width:350px;}
+#mypage .detail .data>p{margin-top:65px; margin-bottom:5px; font-family: 'Pretendard-Bold'; font-size: 22px; color:#154757;}
+#mypage .detail .data>p a{float:right;}
+#mypage .detail .data>p a img{vertical-align: -2px;}
+#mypage .detail .data span{font-size: 17px; color:#888;}
+#mypage .detail .data .open{margin:5px 0 10px; font-size: 17px; }
+#mypage .detail .data .open p{display: inline-block; margin-right:5px; font-family: 'Pretendard-Regular';  font-size: 17px; }
+#mypage .detail .data .open p.green{color:#43AC52;}
+#mypage .detail .data .open p.red{color:#FF3C3C;}
+#mypage .detail .data table tr th{padding:3px 8px 3px 0px;}
+#mypage .detail .data table tr td{line-height: 18px; font-size: 15px;}
+#mypage .detail .data table tr.emergency{color:#FF3C3C}
+/* 상세정보-탭메뉴 */
+#mypage .detail .detail-tab{margin-top:15px; width:350px; cursor: pointer;}
+#mypage .detail .detail-tab p{width:50%; height: 27px; text-align: center; font-size: 17px; height: 27px; border-bottom: 1px solid #ddd;}
+#mypage .detail .detail-tab p.on{border-bottom:3px solid #FC7486;}
+#mypage .detail .tab-container{position:relative; width:350px;}
+#mypage .detail .tab-container .tab-con{position:absolute; top:0; left:0; width:100%; padding-bottom:20px; display: none;}
+#mypage .detail .tab-container .tab-con.show{display: block;}
+#mypage .detail .tab-container .tab-con.hide{display: none;}
+/* 상세정보-시간&진료과목 */
+#mypage .detail h4{margin:20px 0 7px; font-family: 'Pretendard-Bold'; font-size: 18px; }
+#mypage .detail .time table{width:100%; border-collapse: collapse;}
+#mypage .detail .time table tr{line-height: 40px;}
+#mypage .detail .time table tr th{width:100px; border:1px solid #ddd; background: #f4f4f4; font-weight: 400;}
+#mypage .detail .time table tr td{padding-left:10px; border:1px solid #ddd;}
+#mypage .detail .time table tr.holiday{color:#FF3C3C}
+#mypage .detail .subject ul li{list-style: disc; margin-left:25px; line-height: 25px;}
+
+
+/* 상세정보-평점&리뷰 */
+#mypage .detail .score table{width:100%;}
+#mypage .detail .score table th{padding-right:15px; font-weight: 400;}
+#mypage .detail .score table td{padding:7px 0;}
+#mypage .detail .score table td>div{width:220px; height:8px; border-radius: 4px; background: #ddd; }
+#mypage .detail .score table td>div p{width:0%; height:8px; border-radius: 4px; background: #FC7486; }
+#mypage .detail .score table td:nth-child(3){text-align: center;}
+#mypage .detail .score table td>p{font-family: 'Pretendard-Bold'; font-size: 50px; text-align: center;}
+#mypage .detail .score table td>span{display: block;}
+#mypage .detail .score table+a{display: block; width:110px; margin:20px auto; border:1px solid #FC7486; border-radius: 19px; line-height:38px; text-align: center; font-size: 15px; color:#FC7486; }
+#mypage .detail .review ul{margin-top:15px;}
+#mypage .detail .review ul li{margin-bottom:15px; padding-bottom:15px; border-bottom:1px solid #ddd}
+#mypage .detail .review ul li:last-child{margin-bottom:0; padding-bottom:0; border:none;}
+#mypage .detail .review ul li .flex{justify-content: start; margin-bottom:8px;}
+#mypage .detail .review ul li .flex .img{width:40px; height:40px; margin-right:10px; border: 1px solid #ddd; border-radius: 50%; overflow: hidden;}
+#mypage .detail .review ul li .flex .img img{width:100%; height:100%;}
+#mypage .detail .review ul li .flex div{font-size: 17px;}
+#mypage .detail .review ul li .flex div p{margin-top:3px; font-size: 13px; color:#888;}
+#mypage .detail .review ul li>p{margin-top:5px; font-size: 15px;}
