--- a/src/assets/style/emergency.css
+++ b/src/assets/style/emergency.css
@@ -223,7 +223,7 @@ body {
 #emergency .sidebar .list .s-table thead tr th:last-child { border-top-right-radius: 10px; border-bottom-right-radius: 10px;}
 
 /* 종합상황판 */
-#emergency .situation-board { width: 720px; height: calc(100vh - 110px); box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); padding: 14px 25px 20px 18px; margin: 85px 22px 16px 22px; overflow-x: hidden; overflow-y: auto; padding-bottom: 10px; position: relative; background-color: #fff; z-index: 2; border-radius: 10px;}
+#emergency .situation-board { width: 720px; height: calc(100vh - 110px); box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1); padding: 14px 25px 20px 18px; margin: 85px 22px 16px 22px; overflow-x: hidden; overflow-y: auto; padding-bottom: 10px; position: relative; background-color: #fff; z-index: 2; border-radius: 10px;}
 #emergency .situation-board .top-title { display: flex; justify-content: space-between; padding-bottom: 10px; border-bottom: 1px solid #d9d9d9;}
 #emergency .situation-board .top-title .close-button { background-color: #fff; border: none; cursor: pointer;}
 #emergency .situation-board .top-title img { width: 16px; height: 16px;}
@@ -247,7 +247,7 @@ body {
 #emergency .hospital-detail .fixed-button { position: fixed; bottom: 50px; z-index: 100;}
 
 /* 종합상황판이 없는 경우 */
-#emergency .simple-detail { position: relative; height: 250px; margin: 85px 22px 22px 22px; width: 310px; background-color: #fff; z-index: 2; padding: 14px 18px 20px; border-radius: 10px; }
+#emergency .simple-detail { position: relative; height: 250px; margin: 85px 22px 22px 22px; width: 310px; background-color: #fff; z-index: 2; padding: 14px 18px 20px; border-radius: 10px; box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1);}
 #emergency .simple-detail .non-title { display: flex; justify-content: space-between; margin-bottom: 16px; padding-bottom: 10px; border-bottom: 1px solid #d9d9d9;}
 #emergency .simple-detail .name-title { display: flex; align-items: center; justify-content: space-between; margin-bottom: 20px; }
 /* #emergency .simple-detail .name-title .emergency-name { margin-bottom: 20px;} */
