--- a/src/assets/style/pharmacy.css
+++ b/src/assets/style/pharmacy.css
@@ -12,18 +12,28 @@ body {
     justify-content: center;
     margin: 30px 0;
 }
-.pagination button {
-    margin: 0 5px;
+.pagination .page-button {
     padding: 8px 12px;
     border: none;
     background-color: #fff;
     color: #154757;
     cursor: pointer;
 }
-.pagination .active {
+.pagination .page-button.active {
     background-color: #3A7A8F;
     border-radius: 5px;
     color: #FFFFFF;
+}
+.pagination .pagination-arrow {
+    padding: 8px 12px;
+    margin: 0 4px;
+    background-color: #d4dfe3;
+    border-radius: 5px;
+    color: #FFFFFF;
+}
+button[disabled] {
+    cursor: not-allowed;
+    opacity: 0.5;
 }
 
 /* 폰트 */
